--- a/TrackITApp/track-it-app/src/app/app.component.html
+++ b/TrackITApp/track-it-app/src/app/app.component.html
@@ -1,3 +1,11 @@
+<mat-progress-bar
+    *ngIf="isLoading | async"
+    mode="indeterminate"
+    color="warn"
+    style="position: absolute; top: 0; z-index: 100;"
+>
+</mat-progress-bar>
+
 
 <router-outlet></router-outlet>
 
