--- a/TrackITApp/track-it-app/src/app/modals/creation/creation.component.html
+++ b/TrackITApp/track-it-app/src/app/modals/creation/creation.component.html
@@ -39,8 +39,8 @@
     </div>
   </ng-template>
   
-  <button class="btn btn-lg btn-outline-primary" (click)="open(content)">
-    Create
+  <button class="btn btn-lg btn-outline-primary crtbtn" (click)="open(content)">
+    <h1>Create New Entity</h1>
   </button>
   
   <hr />
