--- a/TrackITApp/track-it-app/src/app/functions/companies/companies.component.html
+++ b/TrackITApp/track-it-app/src/app/functions/companies/companies.component.html
@@ -1,12 +1,10 @@
 <app-header></app-header>
       <div class="options-container">
         <div class="create-container">
-          <h1>Create A New Company</h1>
             <creation-modal *ngIf="admin" [creationObject]="addCompany" (addedData)="addData($event)"></creation-modal>
         </div>
         <div class="view-option-container">
-          <h1>View Current Companies</h1>
-          <button class="btn btn-lg btn-outline-primary" (click)="showContent()">View</button>
+          <button class="btn btn-lg btn-outline-primary viewbtn" (click)="showContent()"><h1>View Current Companies</h1></button>
         </div>
       </div>
       
