--- a/TrackITApp/track-it-app/src/app/functions/users/users.component.html
+++ b/TrackITApp/track-it-app/src/app/functions/users/users.component.html
@@ -3,12 +3,10 @@
 <!-- Body -->
 <div class="options-container">
   <div class="create-container">
-    <h1>Create A New User</h1>
       <creation-modal [creationObject]="addUser" (addedData)="addData($event)"></creation-modal>
   </div>
   <div class="view-option-container">
-    <h1>View Current Users</h1>
-    <button class="btn btn-lg btn-outline-primary" (click)="showContent()">View</button>
+    <button class="btn btn-lg btn-outline-primary viewbtn" (click)="showContent()"><h1>View Current Users</h1></button>
   </div>
 </div>
 
