--- a/TrackITApp/track-it-app/src/styles.css
+++ b/TrackITApp/track-it-app/src/styles.css
@@ -31,17 +31,36 @@ body {
 .options-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    color: rgb(56, 55, 55);
-    text-shadow: 2px 2px white;
+    color: white;
+    justify-items: center;
 }
 
 .create-container {
-    margin-top: 1em;
-    margin-left: 2em;
+    width: 22em;
+    height: 8.7em;
+    display: grid;
+    background-color: rgb(18, 46, 77);
+    margin-top: 4em;
+    margin-left: 11em;
+    border-radius: 1.2em;
+    justify-content: center;
 }
 
 .view-option-container {
-    margin-top: 1em;
+    display: grid;
+    margin-top: 4em;
+    width: 100%;
+    margin-left: -15em;
+    justify-content: center;
+}
+
+.viewbtn {
+    width: auto;
+    height: 7em;
+    background-color: rgb(18, 46, 77);
+    color: white;
+    text-shadow: 2px 2px black;
+    border-radius: 1em;
 }
 
 .objects-view-container {
