responsive login and header; tried adding support for loading indicator.

--- a/TrackITApp/track-it-app/src/app/app.component.html
+++ b/TrackITApp/track-it-app/src/app/app.component.html
@@ -1,11 +1,5 @@
-<mat-progress-bar
-    *ngIf="isLoading | async"
-    mode="indeterminate"
-    color="warn"
-    style="position: absolute; top: 0; z-index: 100;"
->
-</mat-progress-bar>
 
+<btp-loading-indicator></btp-loading-indicator>
 
 <router-outlet></router-outlet>
 
