--- a/TrackITApp/track-it-app/src/app/login/login.component.html
+++ b/TrackITApp/track-it-app/src/app/login/login.component.html
@@ -1,4 +1,14 @@
+<btp-loading-indicator></btp-loading-indicator>
 <div id="container">
+
+  <!-- <mat-progress-spinner 
+        id="loading-spinner"
+        *ngIf="isLoading | async"
+        class="example-margin"
+        [color]="color"
+        [mode]="mode">
+</mat-progress-spinner> -->
+
   <div id="logo">
     <h1>TrackIT</h1>
   </div>
