--- a/TrackITApp/track-it-app/src/app/header/header.component.css
+++ b/TrackITApp/track-it-app/src/app/header/header.component.css
@@ -1,4 +1,5 @@
 header {
+    display: grid;
     height: auto;
     width: 100%;
     box-sizing: border-box;
@@ -6,28 +7,37 @@ header {
     border: 2px solid black;
 }
 
-.home-nav {
+.top-nav {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
     width: 100%;
     box-sizing: border-box;
     margin: 0 2em, 0, 2em;
 }
 
 .home-btn {
+    grid-column: 1;
     margin: 1em 1em;
 }
 
 .logo {
+    grid-column: 2;
+    justify-self: center;
     color: white;
     margin-top: 1em;
 }
 
 .logout-btn {
+    grid-column: 3;
+    justify-self: end;
     margin-top: 1em;
-    margin-right: -1em;
+    margin-right: 1em;
 }
 
 
-.nav-container {
+.bottom-nav {
+    display: grid;
+    grid-template-columns: 1fr;
     margin-left: 17em;
     width: 75%;
 }
@@ -44,4 +54,72 @@ header {
     display: inline-block;
     margin: 0 .5em;
     margin-bottom: 2em;
+}
+
+.nav-dropdown {
+    display: none;
+}
+
+@media only screen and (max-width: 600px) {
+    header {
+        justify-items: center;
+    }
+
+    .top-nav {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .home-btn {
+        padding-left: 1em;
+    }
+
+    .logo {
+        grid-column: 1 / span 2;
+        grid-row: 2;
+        padding-left: 7em;
+    }
+
+    .logout-btn {
+        justify-self: start;
+        padding-right: 1em;
+    }
+
+    .nav-dropdown{
+        display: block;
+    }
+
+    .drop-cont {
+        background-color: rgb(18, 46, 77);
+    }
+
+    .dropbtn-toggle, button {
+        color:white;
+    }
+
+    .dropmenu {
+        background-color: rgb(18, 46, 77);
+    }
+    .bottom-nav {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .bottom-nav {
+        margin-left: 0em;
+        width: 100%;
+    }
+
+    .nav-ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        justify-items: center;
+    }
+
+    .nav-btn {
+        display: inline-block;
+        margin: 0 .5em;
+        margin-bottom: .5em;
+    }
 }
