object pages more responsive

--- a/TrackITApp/track-it-app/src/app/functions/resource-type/resource-type.component.html
+++ b/TrackITApp/track-it-app/src/app/functions/resource-type/resource-type.component.html
@@ -3,7 +3,7 @@
         <div class="create-container">
             <creation-modal *ngIf="admin" [creationObject]="addType" (addedData)="addData($event)"></creation-modal>
         </div>
-        <div class="view-option-container">
+        <div class="view-option-container rtc">
             <button class="btn btn-lg btn-outline-primary viewbtn" (click)="showContent()"><h1>View Current Resource Types</h1></button>
         </div>
     </div>
