--- a/TrackITApp/track-it-app/src/app/functions/companies/companies.component.html
+++ b/TrackITApp/track-it-app/src/app/functions/companies/companies.component.html
@@ -3,7 +3,7 @@
         <div class="create-container">
             <creation-modal *ngIf="admin" [creationObject]="addCompany" (addedData)="addData($event)"></creation-modal>
         </div>
-        <div class="view-option-container">
+        <div class="view-option-container cvc">
           <button class="btn btn-lg btn-outline-primary viewbtn" (click)="showContent()"><h1>View Current Companies</h1></button>
         </div>
       </div>
