reports page now responsive

--- a/TrackITApp/track-it-app/src/app/functions/reports/reports.component.css
+++ b/TrackITApp/track-it-app/src/app/functions/reports/reports.component.css
@@ -1,5 +1,6 @@
 #reportingHeader {
     margin: 1em 1em;
+    border-bottom: 1px solid rgb(18, 46, 77);
 }
 
 #break {
@@ -12,16 +13,26 @@
     margin: 2em 2em;
 }
 
+#report-btns-cont {
+    width: 50%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 #genButton {
-    max-width: 7em;
-    max-height: 5em;
+    width: 8em;
+    height: 6em;
 }
 
 #clearButton {
+    margin-top: 0em;
     margin-left: 1em;
-    padding: 0 1em;
-    max-width: 7em;
-    max-height: 5em;
+    padding: 0 0em;
+    width: 8em;
+    height: 6em;
+
 }
 
 .selectedDataDisplay {
@@ -41,4 +52,54 @@
 
 #table-container {
     margin: 0 1em;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 1200px) {
+    #reportingHeader {
+        margin: 1em 2em;
+    }
+    
+    #break {
+        margin-bottom: 2em;
+    }
+    
+    #selectors-container {
+        width: auto;
+        box-sizing: border-box;
+        margin: 2em 1em;
+    }
+
+    #report-btns-cont {
+        width: 60%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    
+    #genButton {
+        margin: 1em 0em;
+        padding: 0em .5em;
+        width: 7em;
+        height: 5em;
+    }
+    
+    #clearButton {
+        margin-top: 1em;
+        margin-left: 1em;
+        padding: 0 0em;
+        width: 7em;
+        height: 5em;
+    }
+    
+    .selectedDataDisplay {
+        margin: 1em 0em;
+        color: white;
+        text-shadow: 2px 2px black;
+        background-color: rgb(18, 46, 77);
+        width: 80%;
+        height: auto;
+        display: grid;
+        justify-content: center;
+    }
 }
