--- a/TrackITApp/track-it-app/src/app/functions/reports/reports.component.html
+++ b/TrackITApp/track-it-app/src/app/functions/reports/reports.component.html
@@ -100,10 +100,11 @@
                       <h3>{{ disDT }}</h3>
                     </div>
             </div>
-
+          <div id="report-btns-cont">
             <button id="genButton" class="btn btn-primary" (click)="GenerateColumns()">Generate</button>
             <button id="clearButton" class="btn btn-primary" (click)="clearDataTableandView()">Clear</button>
-</div>
+          </div>  
+</div> <!-- End of Selector Container-->
 
 
 <div id="table-container">
