--- a/TrackITApp/track-it-app/src/styles.css
+++ b/TrackITApp/track-it-app/src/styles.css
@@ -117,6 +117,7 @@ body {
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+/* Media Queries */
 @media only screen and (max-width: 600px) {
     .options-container {
         display: grid;
